@@ -718,6 +718,7 @@ lex
 nasm (if the GNU assembler is not available)
 pdflatex
 pdftex
+tar
 tex
 yacc
 .EE
@@ -739,6 +740,7 @@ masm
 nasm
 pdflatex
 pdftex
+tar
 tex
 yacc
 .EE
@@ -1823,6 +1825,15 @@ The linker for programs that use shared libraries.
 
 .IP SHLINKFLAGS
 General options passed to the linker for programs using shared libraries.
+
+.IP TAR
+The tar archiver.
+
+.IP TARCOM
+The command line used to call the tar archiver.
+
+.IP TARFLAGS
+General options passed to the tar archiver.
 
 .IP TEX
 The TeX formatter and typesetter.
